Fixed main menu alignment

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -21,6 +21,10 @@ body {
 
 }
 
+#main-menu-content {
+    margin: 0 20rem;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -34,24 +38,29 @@ header {
     margin: auto;
     max-width: 100%;
     display: block;
-    width: 15%;
+    width: 35%;
 }
 
-ul {
+#linkit {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     flex-direction: column;
-
+    margin: 0.5rem 10rem;
+    row-gap: 0.5rem;
 }
 
 #linkit li {
     list-style-type: none;
     background-color: var(--light-purple);
     border-radius: 3px;
-    padding: 0.5rem;
-    margin: 0.2em;
     font-size: 18px;
+}
 
+#linkit li a {
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 0.5rem;
 }
 
 a {
